# gooselib

./: .gitignore  LICENSE  README.md  build-client.bat  build.sh  package-lock.json  package.json  readme.md  svelte.config.js  tailwind.config.cjs  tailwind.config.ts
.github/workflows/: build.yml  ci.yml
client/: package.json  pnpm-lock.yaml  tailwind.config.cjs
client/src/: app.html
client/src-tauri/: Cargo.toml  tauri.conf.json
downloader/: go.mod  main.go
gl-downloader/: .gitignore
gl-packager/: .gitignore  go.mod  main.go
gl-server/: .gitignore  Cargo.toml  apps.go  auth.go  build.sh  database.go  go.sum  main.go  structs.go
gl-server/src/: database.rs  main.rs
go/: go.mod
go/client/: go.mod
go/server/: database.go  go.mod  go.sum  handler.go  server.go  structs.go  utils.go
go/shared/: go.mod  logger.go  packets.go  packets_test.go  utils.go
gui/: .gitignore  bun.lockb  package.json  run.bat  run.sh  svelte.config.js  tailwind.config.ts
gui/binaries/: exec_client  exec_client-x86_64-pc-windows-msvc.bat  readme.md
gui/src/: app.postcss
gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
java/: .gitignore  .project  clean.sh  run-client.sh  run-server.sh  server.bat  settings.gradle.kts
java/client/: .project  build.gradle.kts
java/server/: build.gradle.kts
server/: .gitignore  .project  Makefile  go.mod  main.go  run-native.sh  run.sh  settings.gradle.kts
src/: app.d.ts  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
svr/: compile.sh  gl-downloader.ts  gl-packager.ts  server.ts  tmp
(+104 files in other folders)
