[package]
name = "gl-server"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6.2"
openssl = { version = "0.10" }
sled = "0.34.7"
chrono = "0.4.31"
